--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site Specific Configuration
-sitename: "The Lab"
-name: "The Lab"
+sitename: "Voidwire Labs"
+name: "Voidwire Labs"
 description: "Security research, tools, and random observations"
 url: "https://nickpending.github.io"
 author: nickpending
