--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 sitename: "Voidwire Labs"
 name: "Voidwire Labs"
 description: "Security research, tools, and random observations"
-url: "https://nickpending.github.io"
+url: "https://labs.voidwire.info"
 author: nickpending
 
 # Navigation Links
